Hero Section Image

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .hero-section{
     width: 100%;
-    background-color: green;
+    background-image: url(images/pexels-pixabay-461064.jpg);
     margin: -10px;
 }
 .hero-text{
