--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 .hero-section{
     width: 100%;
-    background-image: url(images/pexels-pixabay-461064.jpg);
+    height: 650px;
+    background: linear-gradient(0deg, rgba(0, 62, 196, 0.3), rgba(0, 62, 196, 0.3)), url(images/pexels-pixabay-461064.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     margin: -10px;
 }
 .hero-text{
