--- a/styles.css
+++ b/styles.css
@@ -26,13 +26,13 @@ body{
 }
 .hero-section{
     font-family: 'Ubuntu', sans-serif;
-    width: 105%;
+    width: 100%;
     height: 650px;
     background: linear-gradient(0deg, rgba(97, 97, 97, 0.7), rgba(97, 97, 97, 0.7)), url(images/pexels-pixabay-461064.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    margin: 0px -10px;
+    margin: 0px;
     padding: 0px;
 }
 .hero-text{
