--- a/about-me/styles.css
+++ b/about-me/styles.css
@@ -40,7 +40,7 @@ a{
     font-family: 'Ubuntu', sans-serif;
     width: 100%;
     height: 500px;
-    background: linear-gradient(0deg, rgba(97, 97, 97, 0.7), rgba(97, 97, 97, 0.7)), url(images/pexels-pixabay-461064.jpg);
+    background: linear-gradient(0deg, rgba(97, 97, 97, 0.7), rgba(97, 97, 97, 0.7)), url(images/pexels-lukas-574070.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -78,7 +78,7 @@ a{
 .hero-spacer{
     height: 215px;
 }
-.about-me-section{
+.skills-section{
     background-color: #424242;
     /* height: 500px; */
 }
@@ -92,7 +92,15 @@ a{
     font-family: 'Ubuntu', sans-serif;
     font-size: 24px!important;
     color: #FFFFFF;
-    text-align: center;
+    text-align: right;
+    padding: 25px;
+}
+.subheading-2{
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 20px!important;
+    color: #FFFFFF;
+    text-align: left;
+    /* padding-bottom: 15px; */
 }
 .card-row{
     padding: 0px 50px 25px 50px;
@@ -106,7 +114,8 @@ a{
 .card-text{
     font-family: 'Ubuntu', sans-serif;
     color: #FFFFFF;
-    text-align: center;
+    text-align: left;
+    padding: 25px;
 }
 .coming-soon-section{
     font-family: 'Ubuntu', sans-serif;
